@@ -13,6 +13,7 @@ Important changes in 1.7 (2019-02-XX) YET UNRELEASED
 	   music disks as it allows access to every single title very easily. For movies it is better to have it in one
 	   piece.
 * Feature: Enhanced win_smb_fix=1 functionality to hopefully catch all Windows incidents.
+* Feature: Added min_dvd_chapter_duration parameter. DVD chapters shorter than this will be ignored. Defaults to 1 second.
 * Feature:
 * Bugfix: Decimal seconds in duration was wrong. Fixed.
 * Bugfix: This was a bad one: The application crashed with a protection fault if there was not enough disk space 
